--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,5 +14,13 @@
 
     <!-- Sync Preferences -->
     <string name="notifications_title">Receive daily notifications</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+
+    <string name="title_main_menu">Main Menu</string>
+    <string name="title_list">Daily Log</string>
+    <string name="title_new_entry">New Entry</string>
+    <string name="title_settings">Settings</string>
+
 
 </resources>
