--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,10 +17,14 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 
+    <!-- Strings used for activity titles -->
     <string name="title_main_menu">Main Menu</string>
     <string name="title_list">Daily Log</string>
     <string name="title_new_entry">New Entry</string>
     <string name="title_settings">Settings</string>
+    <string name="title_activity_daily_log">DailyLog</string>
+
+
 
 
 </resources>
