--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,7 +22,8 @@
     <string name="title_list">Daily Log</string>
     <string name="title_new_entry">New Entry</string>
     <string name="title_settings">Settings</string>
-    <string name="title_activity_daily_log">DailyLog</string>
+    <string name="title_single_entry">Single Entry</string>
+
 
 
 
