--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,9 +23,7 @@
     <string name="title_new_entry">New Entry</string>
     <string name="title_settings">Settings</string>
     <string name="title_single_entry">Single Entry</string>
-
-
-
+    <string name="title_map">Public toilet map</string>
 
 
 </resources>
