--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,6 +24,7 @@
     <string name="title_settings">Settings</string>
     <string name="title_single_entry">Single Entry</string>
     <string name="title_map">Public toilet map</string>
+    <string name="title_analysis">Monthly analysis</string>
 
     <!-- Map strings -->
     <string name="map_api_key">AIzaSyDdDdFv2K6plIEKfiEnWpus6uSSNDcI-VY</string>
